# IC_Kalile_Dataset

./: .gitignore  README.md  mediapipe_fallback.py  pyproject.toml  run_webcam.py
datasets/v1/: report_classes_dim0.md  report_classes_dim10.md  report_classes_dim7.md
docs/: annotate_pkl.md  build_json.md  capture_session.md  context_replay.md  mapeamento_os1-4_vs_original.md  pilot_proxy.md  plan_sim.md  planejamento_finetune_os5-7.md  session_status_2026-06-13.md
schemas/: annotations.schema.json  frames.schema.json  meta.schema.json  plan_events.schema.json
sessions/S01_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
sessions/S02_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
sessions/S03_20260712/: annotations.json  frames.jsonl  meta.json  skeleton.pkl
sessions/S04_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
sessions/S05_20260712/: annotations.json  meta.json  plan_events.json  skeleton.pkl
sessions/S06_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
sessions/S07_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
sessions/S08_20260712/: annotations.json  frames.jsonl  meta.json  plan_events.json  skeleton.pkl
src/datacol/: __init__.py  annotate_pkl.py  build_json.py  capture_session.py  context_replay.py  joints15.py  plan_sim.py
tests/: test_annotate.py  test_build_json.py  test_context_replay.py  test_integrity.py  test_plan_sim.py
